--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,8 +60,8 @@
         android:layout_height="53dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="Etunimi"
         android:inputType="textPersonName"
-        android:text="Etunimi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,8 +73,8 @@
         android:layout_height="53dp"
         android:layout_marginTop="72dp"
         android:ems="10"
+        android:hint="Sukunimi"
         android:inputType="textPersonName"
-        android:text="Sukunimi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,8 +86,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="124dp"
         android:ems="10"
+        android:hint="Sähköpostiosoite"
         android:inputType="textPersonName"
-        android:text="Sähköpostiosoite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
